add readme and script.sql

--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Mon compte{% endblock %}
 
 {% block body %}
-    <link rel="stylesheet" href="{{ asset('css/account-home.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/account.css') }}">
     <main>
         <aside class="select">
             <section class="content">
