--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -32,7 +32,7 @@
             <div class="tiers">
                 <h2>Plannings</h2>
                 <ul>
-                    <li><a href="#">Voir le planning</a></li>
+                    <li><a href="{{ path('app_planning') }}">Voir le planning</a></li>
                 </ul>
             </div>
             <div class="tiers">
