--- a/public/css/account.css
+++ b/public/css/account.css
@@ -93,20 +93,53 @@ main
 .main
 {
     flex-basis: 80%;
+    background-color: #cccccc;
+
 }
 
 .post
 {
     display: flex;
+    padding: 2%;
+    margin: 2%;
 }
 
 .about
 {
-
     flex-basis: 30%;
+    background-color: white;
+    border-radius: 15px;
+    margin: 1%;
+    padding: 1%;
 }
 
 .post-create
 {
     flex-basis: 70%;
+    background-color: white;
+    border-radius: 15px;
+    margin: 1%;
+    padding: 1%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.post-create>form
+{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.post-create>form>*
+{
+    margin: 1%;
+    display: inline-flex;
+}
+
+form input
+{
+    margin-left: 5px;
 }
