adding js for getting all matches

--- a/templates/equipe/show.html.twig
+++ b/templates/equipe/show.html.twig
@@ -25,7 +25,7 @@
             <div class="tiers">
                 <h2>Matches</h2>
                 <ul>
-                    <li><a href="#">Afficher un match</a></li>
+                    <li><a href="{{ path('app_match') }}">Afficher un match</a></li>
                     <li><a href="#">Modifier un match</a></li>
                     <li><a href="#">Ajouter un match</a></li>
                     <li><a href="#">Supprimer une match</a></li>
