--- a/templates/match/index.html.twig
+++ b/templates/match/index.html.twig
@@ -1,20 +1,92 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MatchController!{% endblock %}
+
+{% block title %}Voir une équipe{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <link rel="stylesheet" href="{{ asset("css/header.css") }}">
+    <link rel="stylesheet" href="{{ asset("css/homePage.css") }}">
+    <link rel="stylesheet" href="{{ asset("css/addTeam.css") }}">
+    <link rel="stylesheet" href="{{ asset('css/allTeam.css') }}">
+    <main>
+        <header>
+            <a href="{{ path('app_home') }}"><img src="{{ asset('images/logo.png') }}" alt="logo"></a>
+        </header>
+        <section class="sidebar">
+            <div class="tiers">
+                <h2>Équipes</h2>
+                <ul>
+                    <li><a href="{{ path('app_equipe') }}">Afficher une équipe</a></li>
+                    <li><a href="{{ path('app_equipe_edit') }}">Modifier une équipe</a></li>
+                    <li><a href="{{ path('app_equipe_add') }}">Ajouter une équipe</a></li>
+                    <li><a href="{{ path('app_equipe_delete') }}">Supprimer une équipe</a></li>
+                </ul>
+            </div>
+            <div class="tiers">
+                <h2>Matches</h2>
+                <ul>
+                    <li><a href="#">Afficher un match</a></li>
+                    <li><a href="#">Modifier un match</a></li>
+                    <li><a href="#">Ajouter un match</a></li>
+                    <li><a href="#">Supprimer une match</a></li>
+                </ul>
+            </div>
+            <div class="tiers">
+                <h2>Plannings</h2>
+                <ul>
+                    <li><a href="#">Voir le planning</a></li>
+                </ul>
+            </div>
+            <div class="tiers">
+                {% if is_granted('ROLE_USER') or is_granted('ROLE_COACH') or is_granted('ROLE_ADMIN') %}
+                    <h2>{{ user.pseudo }}</h2>
+                    <ul>
+                        <li><a href="#">Mon compte</a></li>
+                        <li><a href="{{ path('app_logout') }}">Se deconnecter</a></li>
+                    </ul>
+                {% else %}
+                    <h2>Mon compte</h2>
+                    <ul>
+                        <li><a href="{{ path("app_login")}}">Connexion</a></li>
+                    </ul>
+                {% endif %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+            </div>
+        </section>
+        <img src="{{ asset('images/banniere_2.png') }}" alt="banner" class="banner">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/laragon/www/handball-project/src/Controller/MatchController.php'|file_link(0) }}">src/Controller/MatchController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/laragon/www/handball-project/templates/match/index.html.twig'|file_link(0) }}">templates/match/index.html.twig</a></code></li>
-    </ul>
-</div>
+
+        <section class="main">
+            <section class="allMatches">
+                <h1 style="width: 100%; text-align: center">Nos prochain matchs</h1>
+
+            </section>
+        </section>
+    </main>
+    <section class="contact reveal_bottom">
+        <section class="contact-container">
+            <h1>NOUS CONTACTER</h1>
+            <article class="infos">
+                <h2>Guilherand-Granges Ardèche Handball</h2>
+                <a href="#" class="contact-element">
+                    <i class="bi bi-geo-alt"></i>
+                    <p> Espace Rémy Roure - 07500 Guilherand-Granges</p>
+                </a>
+                <a href="#" class="contact-element">
+                    <i class="bi bi-facebook"></i>
+                    <p> @GGAhandball</p>
+                </a>
+                <a href="mailto:5107009@ffhandball.net" class="contact-element">
+                    <i class="bi bi-envelope-check"></i>
+                    <p> 5107009@ffhandball.net</p>
+                </a>
+
+            </article>
+        </section>
+    </section>
+
+    <script src="{{ asset('js/transitionBottomTop.js') }}"></script>
+    <script src="{{ asset('js/Matches.js') }}"></script>
 {% endblock %}
+
+
