--- a/templates/equipe/index.html.twig
+++ b/templates/equipe/index.html.twig
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{ asset("css/homePage.css") }}">
     <link rel="stylesheet" href="{{ asset("css/addTeam.css") }}">
     <link rel="stylesheet" href="{{ asset("css/allTeam.css") }}">
+    <link rel="stylesheet" href="{{ asset("css/loader.css") }}">
 
     <main>
         <header>
@@ -58,8 +59,8 @@
 
         <section class="main ">
             <section class="allTeam">
-                <h1 style="width: 100%; text-align: center">Nos Equipes</h1>
-
+                <h1 style="width: 100%; text-align: center; color: #AAAAAA; margin-bottom: 25px;">Nos Equipes</h1>
+                <div class="loader" id="loader"></div>
             </section>
 
         </section>
