--- a/public/css/allTeam.css
+++ b/public/css/allTeam.css
@@ -1,13 +1,14 @@
 .allTeam{
     width: 95%;
-    background-color: rgba(255,255,255,0.7);
+    background-color: rgba(255,255,255,0.2);
     margin:5% auto 5% auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     height: max-content;
     gap: 2%;
-    padding: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
     text-transform: uppercase;
     border-radius: 25px;
 }
@@ -26,7 +27,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #999999;
+    background-color: rgba(255,255,255,0.6);
     border: solid 1px black;
     border-radius: 8px;
     color: black !important;
@@ -34,7 +35,9 @@
 }
 
 .teamArticle img{
-    width: 300px;
+    max-height: 180px;
+    max-width: 280px;
     margin-left: auto;
     margin-right: auto;
 }
+
