matchSection css wip

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -54,8 +54,8 @@
         <img src="{{ asset('images/banniere_2.png') }}" alt="banner" class="banner">
 
         <section class="match reveal_bottom">
-            <section class="nextMatch matchSection">
-                <h2>Prochain match</h2>
+            <fieldset class="nextMatch matchSection">
+                <legend><h2>Prochain match</h2></legend>
                 <article>
                     <p class="next-match-date"></p>
                     <p class="next-match-team1"></p>
@@ -64,7 +64,7 @@
                     <p class="next-match-location"></p>
                     <p class="next-match-remaining-time"></p>
                 </article>
-            </section>
+            </fieldset>
 
             <section class="lastMatch matchSection">
             <h2>Match précédent</h2>
