--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -56,6 +56,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .news-content
@@ -177,6 +178,7 @@
     height: 400px;
     align-items: center;
     background-color: #f2f2f2;
+    flex-wrap: wrap;
 }
 
 h2 {
@@ -187,15 +189,26 @@ h2 {
 }
 
 .matchSection{
-    background-color: red;
+    background-color: #333333;
     height: 200px;
     width: 500px;
     border-radius: 12px;
+    box-shadow: 0 0 7px 3px rgba(0, 0, 0, 0.25);
+    margin: 1em;
+    color: white;
 }
 
-.matchSection>h2{
-    width: 100%;
+.matchSection>legend{
+    border: none;
+}
 
+legend>h2{
+    background-color: #333333;
+    box-shadow: 0 -2px 5px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    border: 1px solid #222222;
+    padding: 0 0.3em 0 0.3em;
+    color: white;
 }
 
 
