edit of the navbar

--- a/templates/equipe/show.html.twig
+++ b/templates/equipe/show.html.twig
@@ -17,7 +17,6 @@
                 <h2>Équipes</h2>
                 <ul>
                     <li><a href="{{ path('app_equipe') }}">Afficher une équipe</a></li>
-                    <li><a href="{{ path('app_equipe_edit') }}">Modifier une équipe</a></li>
                     <li><a href="{{ path('app_equipe_add') }}">Ajouter une équipe</a></li>
                     <li><a href="{{ path('app_equipe_delete') }}">Supprimer une équipe</a></li>
                 </ul>
@@ -26,7 +25,6 @@
                 <h2>Matches</h2>
                 <ul>
                     <li><a href="{{ path('app_match') }}">Afficher un match</a></li>
-                    <li><a href="#">Modifier un match</a></li>
                     <li><a href="#">Ajouter un match</a></li>
                     <li><a href="#">Supprimer une match</a></li>
                 </ul>
@@ -56,7 +54,7 @@
         <img src="{{ asset('images/banniere_2.png') }}" alt="banner" class="banner">
 
 
-        <section class="main ">
+        <section class="main editTeam">
 
         </section>
     </main>
