--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -190,8 +190,9 @@ h2 {
 
 .matchSection{
     background-color: #333333;
-    height: 200px;
-    width: 500px;
+    height: 300px;
+    min-width: 500px;
+    width: 40vw;
     border-radius: 12px;
     box-shadow: 0 0 7px 3px rgba(0, 0, 0, 0.25);
     margin: 1em;
