--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -56,9 +56,11 @@
                 <legend><h2>Prochain match</h2></legend>
                 <article>
                     <p class="next-match-date"></p>
-                    <p class="next-match-team1"></p>
-                    <p class="next-match-time"></p>
-                    <p class="next-match-team2"></p>
+                    <section class="vsMatchSection">
+                        <p class="next-match-team1"></p>
+                        <p class="next-match-time"></p>
+                        <p class="next-match-team2"></p>
+                    </section>
                     <p class="next-match-location"></p>
                     <p class="next-match-remaining-time"></p>
                 </article>
