--- a/public/css/header.css
+++ b/public/css/header.css
@@ -65,7 +65,6 @@ header img
     border-radius: 8px;
 }
 
-
 .tiers li{
     height: 50px;
     font-size: 1.5em;
@@ -79,6 +78,7 @@ header img
     text-decoration: none;
     margin-top: auto;
     margin-bottom: auto;
+    width: 100%;
 }
 
 .tiers li:hover {
