--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -8,26 +8,27 @@
             <a href="{{ path('app_home') }}"><h2>Accueil</h2></a>
         </div>
         <div class="tiers">
-            <h2>Équipes</h2>
-            <ul>
-                <li><a href="{{ path('app_equipe') }}">Afficher une équipe</a></li>
-                <li><a href="{{ path('app_equipe_add') }}">Ajouter une équipe</a></li>
-                <li><a href="{{ path('app_equipe_delete') }}">Supprimer une équipe</a></li>
-            </ul>
+            <a href="{{ path('app_equipe') }}"><h2>Équipes</h2></a>
+            {% if is_granted('ROLE_COACH') or is_granted('ROLE_ADMIN') %}
+                <ul>
+                    <li><a href="{{ path('app_equipe') }}">Afficher les équipes</a></li>
+                    <li><a href="{{ path('app_equipe_add') }}">Ajouter une équipe</a></li>
+                    <li><a href="{{ path('app_equipe_delete') }}">Supprimer une équipe</a></li>
+                </ul>
+            {% endif %}
         </div>
         <div class="tiers">
-            <h2>Matches</h2>
-            <ul>
-                <li><a href="{{ path('app_match') }}">Afficher un match</a></li>
-                <li><a href="{{ path('app_match_create') }}">Ajouter un match</a></li>
-                <li><a href="{{ path('app_match_delete') }}">Supprimer une match</a></li>
-            </ul>
+            <a href="{{ path('app_match') }}"><h2>Matches</h2></a>
+            {% if is_granted('ROLE_COACH') or is_granted('ROLE_ADMIN') %}
+                <ul>
+                    <li><a href="{{ path('app_match') }}">Afficher les matchs</a></li>
+                    <li><a href="{{ path('app_match_create') }}">Ajouter un match</a></li>
+                    <li><a href="{{ path('app_match_delete') }}">Supprimer un match</a></li>
+                </ul>
+            {% endif %}
         </div>
         <div class="tiers">
-            <h2>Plannings</h2>
-            <ul>
-                <li><a href="{{ path('app_planning') }}">Voir le planning</a></li>
-            </ul>
+            <a href="{{ path('app_planning') }}"><h2>Planning</h2></a>
         </div>
         <div class="tiers">
             {% if is_granted('ROLE_USER') or is_granted('ROLE_COACH') or is_granted('ROLE_ADMIN') %}
