--- a/public/css/addTeam.css
+++ b/public/css/addTeam.css
@@ -15,7 +15,7 @@
     height: 450px;
     text-align: center;
     border-radius: 25px;
-    margin: auto;
+    margin: 10px auto;
     display: flex;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
@@ -94,17 +94,7 @@
 .main{
     display: flex;
     justify-content: center;
-    background: url('../images/handball.png'),
-    url('../images/logo.png'),
-    url('../images/handballPlayer.png'),
-    url('../images/trophee.png');
-    background-size: 30%, 18%, 15%, 14%;
-    background-repeat: no-repeat;
-    background-position: -10% -20%, 85% 15%, 20% 100%, 70% 110%,100% 0%;
-    background-color: rgb(60,60,60);
 
-    color: grey;
-    background-attachment: fixed;
 }
 
 /*.formCreateTeam div{*/
