--- a/templates/equipe/index.html.twig
+++ b/templates/equipe/index.html.twig
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ asset("css/addTeam.css") }}">
     <link rel="stylesheet" href="{{ asset("css/allTeam.css") }}">
     <link rel="stylesheet" href="{{ asset("css/loader.css") }}">
-
+    <link rel="stylesheet" href="{{ asset("css/backgroundIcons.css") }}">
     <main>
         <header>
             <a href="{{ path('app_home') }}"><img src="{{ asset('images/logo.png') }}" alt="logo"></a>
@@ -25,9 +25,9 @@
             <div class="tiers">
                 <h2>Matches</h2>
                 <ul>
-                    <li><a href={{ path('app_match') }}#">Afficher un match</a></li>
-                    <li><a href="#">Ajouter un match</a></li>
-                    <li><a href="#">Supprimer une match</a></li>
+                    <li><a href="{{ path('app_match') }}">Afficher un match</a></li>
+                    <li><a href="{{ path('app_match_edit') }}">Modifier un match</a></li>
+                    <li><a href="{{ path('app_match_create') }}">Ajouter un match</a></li>
                 </ul>
             </div>
             <div class="tiers">
