--- a/public/css/post.css
+++ b/public/css/post.css
@@ -3,11 +3,10 @@ main {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100vh;
 }
 
-section {
-    width: 50%;
+.post {
+    width: 80%;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -17,5 +16,12 @@ section {
     max-width: 50%;
     max-height: 500px;
     object-fit: cover;
+    flex-basis: 50%;
+    padding: 1%;
+}
 
+.post-article
+{
+    flex-basis: 50%;
+    padding: 1%;
 }
