--- a/templates/equipe/index.html.twig
+++ b/templates/equipe/index.html.twig
@@ -56,11 +56,7 @@
 
 
         <section class="main ">
-            <section class="allTeam">
-                <h1 style="width: 100%; text-align: center; color: #AAAAAA; margin-bottom: 25px;">Nos Equipes</h1>
-                <div class="loader" id="loader"></div>
-            </section>
-
+            <section class="allTeam"></section>
         </section>
     </main>
     <section class="contact reveal_bottom">
