--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -3,6 +3,7 @@
     <header>
         <a href="{{ path('app_home') }}"><img src="{{ asset('images/logo.png') }}" alt="logo"></a>
     </header>
+
     <section class="sidebar">
         <div class="tiers">
             <a href="{{ path('app_home') }}"><h2>Accueil</h2></a>
@@ -45,5 +46,7 @@
             {% endif %}
         </div>
     </section>
-    <img src="{{ asset('images/banniere_2.png') }}" alt="banner" class="banner">
+    {% if app.request.attributes.get('_route') != 'app_account' %}
+        <img src="{{ asset('images/banniere_2.png') }}" alt="banner" class="banner">
+    {% endif %}
 {% endblock %}
