--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -80,27 +80,7 @@
                 <li class="page-link-li"><a href="#" class="page-link-a">></a></li>
             </ul>
         </section>
-        <section class="contact reveal_bottom">
-            <section class="contact-container">
-                <h1>NOUS CONTACTER</h1>
-                <article class="infos">
-                    <h2>Guilherand-Granges Ardèche Handball</h2>
-                    <a href="#" class="contact-element">
-                        <i class="bi bi-geo-alt"></i>
-                        <p> Espace Rémy Roure - 07500 Guilherand-Granges</p>
-                    </a>
-                    <a href="#" class="contact-element">
-                        <i class="bi bi-facebook"></i>
-                        <p> @GGAhandball</p>
-                    </a>
-                    <a href="mailto:5107009@ffhandball.net" class="contact-element">
-                        <i class="bi bi-envelope-check"></i>
-                        <p> 5107009@ffhandball.net</p>
-                    </a>
-
-                </article>
-            </section>
-        </section>
+        {% include 'footer.html.twig' %}
     </main>
     <script src="{{ asset('js/index.js') }}"></script>
     <script src="{{ asset('js/transitionBottomTop.js') }}"></script>
